--- a/configuration.yaml
+++ b/configuration.yaml
@@ -85,48 +85,26 @@ http:
 ### IOS CONFIG
 #####################################################################
 ios:
-#  push:
-#    categories:
-#      - name: Alarm
-#        identifier: 'ALARM'
-#        actions:
-#          - identifier: 'SOUND_ALARM'
-#            title: 'Sound Alarm'
-#            activationMode: 'background'
-#            authenticationRequired: yes
-#            destructive: yes
-#            behavior: 'default'
-#          - identifier: 'SILENCE_ALARM'
-#            title: 'Silence Alarm'
-#            activationMode: 'background'
-#            authenticationRequired: yes
-#            destructive: no
-#            behavior: 'textInput'
-#            textInputButtonTitle: 'Silencio!'
-#            textInputPlaceholder: 'Placeholder'
+  push:
+    categories:
+      - name: Alarm
+        identifier: 'ALARM'
+        actions:
+          - identifier: 'SOUND_ALARM'
+            title: 'Sound Alarm'
+            activationMode: 'background'
+            authenticationRequired: yes
+            destructive: yes
+            behavior: 'default'
+          - identifier: 'SILENCE_ALARM'
+            title: 'Silence Alarm'
+            activationMode: 'background'
+            authenticationRequired: yes
+            destructive: no
+            behavior: 'textInput'
+            textInputButtonTitle: 'Silencio!'
+            textInputPlaceholder: 'Placeholder'
 
-### Beta Config - 
-#  push_categories:
-#    - name: Alarm
-#      identifier: 'ALARM'
-#      actions:
-#        - identifier: 'SOUND_ALARM'
-#          title: 'Sound Alarm'
-#          activationMode: 'background'
-#          authenticationRequired: yes
-#          destructive: yes
-#          behavior: 'default'
-#          context: 'default'
-#        - identifier: 'SILENCE_ALARM'
-#          title: 'Silence Alarm'
-#          activationMode: 'background'
-#          authenticationRequired: yes
-#          destructive: no
-#          behavior: 'TextInput'
-#          context: 'default'
-#          textInputButtonTitle: 'Acknowledge'
-#          textInputPlaceholder: '...'
-  
 ####################################################
 #                                                  #
 #                     Includes                 #
