--- a/automation/hvac_downstairs_mode.yaml
+++ b/automation/hvac_downstairs_mode.yaml
@@ -1,25 +1,50 @@
 #####################################################################
-### HVAC DOWNSTAIRS; Turn off the system if the weather is awesome!
+### HVAC DOWNSTAIRS; SET AWESOME
 #####################################################################
-- alias: hvac downstairs off if awesome weather
+- alias: hvac downstairs awesome
   trigger:
     - platform: state
       entity_id: sensor.season
       to: 'Awesome'
 
-    - platform: template
-      value_template: "{% if is_state('sensor.season', 'Awesome') %}true{% endif %}"
-
   condition:
-    - condition: state
-      entity_id: sensor.ds_climate_control
-      state: 'Comfy'
+    - condition: numeric_state
+      entity_id: sensor.2gig_technologies_ct101_thermostat_iris_temperature_18_1
+      below: 79
+
+    - condition: numeric_state
+      entity_id: sensor.2gig_technologies_ct101_thermostat_iris_temperature_18_1
+      above: 66
 
   action:
-    - service: climate.set_operation_mode
-      entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
+    - service: script.turn_off
+      entity_id:
+        - script.cool_stairs_60min
+        - script.cool_stairs_120min
+        - script.cool_stairs_180min
+        - script.heat_stairs_60min
+        - script.heat_stairs_120min
+        - script.heat_downstairs_180min
+
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_ac
+        value: 81
+
+    - service: input_slider.select_value
+      data_template:
+        entity_id: input_slider.downstairs_heat
+        value: 66
+
+    - service: group.set_visibility
+      entity_id: group.downstairs_cooling
       data:
-        operation_mode: 'Off'
+        visible: True
+
+    - service: group.set_visibility
+      entity_id: group.downstairs_heating
+      data:
+        visible: True
 
 #####################################################################
 ### HVAC DOWNSTAIRS; SET COOL
@@ -33,10 +58,6 @@
 
     - platform: template
       value_template: "{% if is_state('sensor.season', 'Summer') %}true{% endif %}"
-
-    - platform: state
-      entity_id: sensor.ds_climate_control
-      to: 'Hot'
 
   action:
     - service: group.set_visibility
@@ -66,10 +87,6 @@
 
     - platform: template
       value_template: "{% if is_state('sensor.season', 'Winter') %}true{% endif %}"
-
-    - platform: state
-      entity_id: sensor.ds_climate_control
-      to: 'Cold'
 
   action:
     - service: group.set_visibility
