--- a/automation/kodi.yaml
+++ b/automation/kodi.yaml
@@ -23,5 +23,5 @@
           {% elif trigger.to_state.state == "stopped" or trigger.to_state.state == "ended" %}
             scene.movie_ended
           {% else %}
-            scene.living_room_dim
+            scene.living_room_normal
           {% endif %}
