--- a/input_boolean.yaml
+++ b/input_boolean.yaml
@@ -15,6 +15,11 @@ after_hours:
   name: After Hours
   icon: mdi:clock
 
+# After Hours
+bedtime:
+  name: Bedtime
+  icon: mdi:hotel
+
 # Raining
 rain:
   name: Rain
