--- a/notify.yaml
+++ b/notify.yaml
@@ -1,12 +1,9 @@
-## iOS
-- platform: ios
-  target: !secret ios_token
-
 ## PushBullet
 - platform: pushbullet
   name: pushbullet
   api_key: !secret pushbullet_api_key
 
+##############################
 ## Future Adds....
 # html 5
 #- platform: html5
@@ -20,3 +17,9 @@
 #  port: 80
 ##  username: USERNAME
 #  password: PASSWORD
+
+##############################
+### Retired in favor of iOS app
+## iOS
+#- platform: ios
+#  target: !secret ios_token
