--- a/scripts/bedtime.yaml
+++ b/scripts/bedtime.yaml
@@ -8,6 +8,10 @@ bedtime:
 ### Lock the doors
   - service: lock.lock
 
+  - service: input_boolean.turn_off
+    data:
+      entity_id: input_boolean.bedtime
+
 ### Turn off outlets and devices
   - service: homeassistant.turn_off
     entity_id: group.things
