--- a/sensors/batteries.yaml
+++ b/sensors/batteries.yaml
@@ -1,34 +1,3 @@
-
-#####################################################################
-### BATTERY STATUS- DEVICES
-#####################################################################
-
-## sensor: iCloud Battery - Rick
-- platform: template
-  sensors:
-    iphone_battery_rick:
-      friendly_name: "Rick's Phone Battery"
-      value_template: >-
-        {%- if states.device_tracker.iphwn666.attributes.battery | round(2) != None -%}
-          {{ states.device_tracker.iphwn666.attributes.battery | round(2) }}
-        {%- else -%}
-          Unknown
-        {%- endif -%}
-      unit_of_measurement: '%'
-
-## sensor: iCloud Battery - Megs
-- platform: template
-  sensors:
-    iphone_battery_megs:
-      friendly_name: "Meg's Phone Battery"
-      value_template: >-
-        {%- if states.device_tracker.iphone7.attributes.battery | round(2) != None -%}
-          {{ states.device_tracker.iphone7.attributes.battery | round(2) }}
-        {%- else -%}
-          Unknown
-        {%- endif -%}
-      unit_of_measurement: '%'
-
 #####################################################################
 ### BATTERY STATUS - LOCKS
 #####################################################################
@@ -39,8 +8,8 @@
     lock_beach_battery:
       friendly_name: "Beach Lock Battery"
       value_template: >-
-        {%- if states.lock.assa_abloy_yale_real_living_captouch_lever_locked_12_0.attributes.battery_level != None -%}
-          {{ states.lock.assa_abloy_yale_real_living_captouch_lever_locked_12_0.attributes.battery_level }}
+        {%- if states.zwave.assa_abloy_yale_real_living_captouch_lever_12.attributes.battery_level != None -%}
+          {{ states.zwave.assa_abloy_yale_real_living_captouch_lever_12.attributes.battery_level }}
         {%- else -%}
           Unknown
         {%- endif -%}
@@ -52,9 +21,41 @@
     lock_south_battery:
       friendly_name: "South Lock Battery"
       value_template: >-
-        {%- if states.lock.assa_abloy_yale_real_living_captouch_lever_locked_16_0.attributes.battery_level != None -%}
-          {{ states.lock.assa_abloy_yale_real_living_captouch_lever_locked_16_0.attributes.battery_level }}
+        {%- if states.zwave.assa_abloy_yale_real_living_captouch_lever_16.attributes.battery_level != None -%}
+          {{ states.zwave.assa_abloy_yale_real_living_captouch_lever_16.attributes.battery_level }}
         {%- else -%}
           Unknown
         {%- endif -%}
       unit_of_measurement: '%'
+
+
+
+#####################################################################
+### BATTERY STATUS- DEVICES (retired)
+#####################################################################
+
+### sensor: iCloud Battery - Rick
+#- platform: template
+#  sensors:
+#    iphone_battery_rick:
+#      friendly_name: "Rick's Phone Battery"
+#      value_template: >-
+#        {%- if states.device_tracker.iphwn666.attributes.battery | round(2) != None -%}
+#          {{ states.device_tracker.iphwn666.attributes.battery | round(2) }}
+#        {%- else -%}
+#          Unknown
+#        {%- endif -%}
+#      unit_of_measurement: '%'
+#
+### sensor: iCloud Battery - Megs
+#- platform: template
+#  sensors:
+#    iphone_battery_megs:
+#      friendly_name: "Meg's Phone Battery"
+#      value_template: >-
+#        {%- if states.device_tracker.iphone7.attributes.battery | round(2) != None -%}
+#          {{ states.device_tracker.iphone7.attributes.battery | round(2) }}
+#        {%- else -%}
+#          Unknown
+#        {%- endif -%}
+#      unit_of_measurement: '%'
