--- a/sensors/hvac_downstairs.yaml
+++ b/sensors/hvac_downstairs.yaml
@@ -14,6 +14,11 @@
 ## This automatically returns "unknown" if the state is not set
       value_template: "{{ states('climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2') }}"
 
+## Downstairs Operating State
+    hvac_downstairs_op_state:
+      friendly_name: "Downstairs HVAC State"
+      value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_18_2'].attributes|default({})).operating_state|default('unknown') }}"
+
 ## Downstairs Fan State
     hvac_downstairs_fan:
       friendly_name: "Downstairs HVAC Fan"
@@ -28,21 +33,3 @@
     hvac_downstairs_heat_setpoint:
       friendly_name: "Downstairs Heat Setpoint"
       value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_heating_1_18_1'].attributes|default({})).temperature|default('unknown') }}"
-
-#### LEGACY Config
-#    ## Downstairs Climate
-#    hvac_downstairs_climate:
-#      friendly_name: "Downstairs Climate"
-#      value_template: >-
-#        {% set temperature = states.sensor['2gig_technologies_ct101_thermostat_iris_temperature_18_1'].state|default(0)|float %}
-#        {% if not temperature %}
-#          {{ states('sensor.2gig_technologies_ct101_thermostat_iris_temperature_18_1') }}
-#        {% elif 68.5 <= temperature <= 80 %}
-#          Comfy
-#        {% elif temperature < 68.5 %}
-#          Cold
-#        {% elif temperature > 80 %}
-#          Hot
-#        {% else %}
-#          {{ temperature }}
-#        {% endif %}
