--- a/sensors/hvac_upstairs.yaml
+++ b/sensors/hvac_upstairs.yaml
@@ -14,6 +14,11 @@
 ## This automatically returns "unknown" if the state is not set
       value_template: "{{ states('climate.2gig_technologies_ct101_thermostat_iris_cooling_1_24_2') }}"
 
+## Upstairs Operating State
+    hvac_upstairs_op_state:
+      friendly_name: "Upstairs HVAC State"
+      value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_24_2'].attributes|default({})).operating_state|default('unknown') }}"
+
 ## Upstairs Fan State
     hvac_upstairs_fan:
       friendly_name: "Upstairs HVAC Fan"
@@ -28,20 +33,3 @@
     hvac_upstairs_heat_setpoint:
       friendly_name: "Upstairs Heat Setpoint"
       value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_heating_1_24_1'].attributes|default({})).temperature|default('unknown') }}"
-
-    ## Upstairs Climate
-#    hvac_upstairs_climate:
-#      friendly_name: "Upstairs Climate"
-#      value_template: >-
-#        {% set temperature = states.sensor['2gig_technologies_ct101_thermostat_iris_temperature_24_1'].state|default(0)|float %}
-#        {% if not temperature %}
-#          {{ states('sensor.2gig_technologies_ct101_thermostat_iris_temperature_24_1') }}
-#        {% elif 68.5 <= temperature <= 83.5 %}
-#          Comfy
-#        {% elif temperature < 68.5 %}
-#          Cold
-#        {% elif temperature > 83.5 %}
-#          Hot
-#        {% else %}
-#          {{ temperature }}
-#        {% endif %}
